# cesources

./: CMakeLists.txt  README.md
Dockerfiles/: Dockerfile.fedora-toolbox
src/: CMakeLists.txt  file_io.c  file_io.h  main.c  write_resources.c  write_resources.h
src/include/: cesources.h
